:lipstick: Avoid code tab overflow

--- a/frontend/src/app/main/ui/inspect/right_sidebar.scss
+++ b/frontend/src/app/main/ui/inspect/right_sidebar.scss
@@ -30,8 +30,7 @@
 
 .tool-windows {
   block-size: 100%;
-  display: flex;
-  flex-direction: column;
+  display: grid;
   gap: var(--sp-s);
 }
 
